force-app/main/default/objects/Account.object
<CustomObject>
    <fields>
        <fullName>hud_DEPT_ID__c</fullName>
        <externalId>true</externalId>
        <label>hud_DEPT_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_DEPT_LONG_DESC__c</fullName>
        <label>hud_DEPT_LONG_DESC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_DEPT_OFFICIAL_DESC__c</fullName>
        <label>hud_DEPT_OFFICIAL_DESC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_DEPT_SHORT_DESC__c</fullName>
        <label>hud_DEPT_SHORT_DESC</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_EFFDT__c</fullName>
        <label>hud_EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_EFF_STATUS__c</fullName>
        <label>hud_EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_ESTAB_ID__c</fullName>
        <label>hud_ESTAB_ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_FACULTY_CD__c</fullName>
        <label>hud_FACULTY_CD</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_MAJ_AFFILIATION_CD__c</fullName>
        <label>hud_MAJ_AFFILIATION_CD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_MAJ_AFFILIATION_DESC__c</fullName>
        <label>hud_MAJ_AFFILIATION_DESC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_DEPT_DESC__c</fullName>
        <label>hud_STU_DEPT_DESC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_STU_DEPT__c</fullName>
        <label>hud_STU_DEPT</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_SUB_AFFILIATION_CD__c</fullName>
        <label>hud_SUB_AFFILIATION_CD</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_SUB_AFFILIATION_DESC__c</fullName>
        <label>hud_SUB_AFFILIATION_DESC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_UPDATE_BY__c</fullName>
        <label>hud_UPDATE_BY</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hud_UPDATE_DT__c</fullName>
        <label>hud_UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>hud_UPDATE_SOURCE__c</fullName>
        <label>hud_UPDATE_SOURCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
</CustomObject>